--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "express": "^4.21.2",
     "mongodb": "^6.13.0",
-    "mongoose": "^8.9.7"
+    "mongoose": "^8.9.7",
+    "multer": "^1.4.5-lts.1"
   }
 }
